2013-10-20  Charlie Zender  <zender@uci.edu>

	* NCO 4.3.8 release procedure:
 	Changes since nco-4_3_7: hash?
	cd ~/nco;cvs tag -d nco-4_3_8;cvs tag -d nco-4_3_8-1
	cd ~/nco;cvs commit -m "Preparing nco-4.3.8 release"
	cvs tag -c nco-4_3_8;cvs tag -c nco-4_3_8-1

	* Document hash table behavior. Play with -Wcast-qual

	* Tidy group routines. Verify no regressions before implementing hashes.

2013-10-18  Charlie Zender  <zender@uci.edu>

	* Supplant strcmp() with hash table in trv_tbl_var_nm_fll()
	Works on all operators except ncbo

	* #define NCO_HASH token to use hashes instead of circular strcmp()

	* Hash all objects in traversal table and store resultant hash table
	Use string-keyed hash based on full object name

	* Add uthash hash table functionality stubs and nco_uthash.h
	BSD-licensed code by Troy D. Hanson http://troydhanson.github.com/uthash

	* Warn about excessive malloc()-size requests.
	Namespace pollution caused request for 18446744073709551608 B = 16 EB

	* Move ncga enum to nces enum and place at end to workaround namespace pollution
	Pollution tainted shared libraries on Yellowstone at NWSC. To prevent recurrence
	must prefix all external symbols with nco_, and remove all global variables.

2013-10-17  Charlie Zender  <zender@uci.edu>

	* NCO 4.3.7 release procedure:
 	Changes since nco-4_3_6: --mrd, --hdf4, --xml, ncrename groups
	cd ~/nco;cvs tag -d nco-4_3_7;cvs tag -d nco-4_3_7-1
	cd ~/nco;cvs commit -m "Preparing nco-4.3.7 release"
	cvs tag -c nco-4_3_7;cvs tag -c nco-4_3_7-1

2013-10-16 Pedro Vicente  <pvicente@uci.edu>

	* Add ncrename regressions #1 to #21: attributes, dimensions, variables, groups.

2013-10-16  Charlie Zender  <zender@uci.edu>

	* Add --xml_no_location

2013-10-15  Charlie Zender  <zender@uci.edu>

	* Handle control characters slightly better XML mode

	* Add CDL tags <group>, isUnlimited, <values>. XML dumping is mostly complete.

2013-10-10  Charlie Zender  <zender@uci.edu>

	* Document -m -M -H
