@@ -6,6 +6,8 @@
 	cd ~/nco;cvs commit -m "Preparing nco-4.3.8 release"
 	cvs tag -c nco-4_3_8;cvs tag -c nco-4_3_8-1
 
+	* Add hashing to trv_tbl_mrk_xtr(). More regressions.
+
 	* Document hash table behavior. Play with -Wcast-qual
 
 	* Tidy group routines. Verify no regressions before implementing hashes.
@@ -15,7 +17,7 @@
 	* Supplant strcmp() with hash table in trv_tbl_var_nm_fll()
 	Works on all operators except ncbo
 
-	* #define NCO_HASH token to use hashes instead of circular strcmp()
+	* #define NCO_TRV_OBJ_HSH token to use hashes instead of strcmp() loops
 
 	* Hash all objects in traversal table and store resultant hash table
 	Use string-keyed hash based on full object name
